# cbs-discord-bot

./: .env.example  .gitignore  README.md  bot.py  cbs_parser.py  main.py  pyproject.toml  sheets_client.py
tests/: test_parser.py
